--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2
+				<section>
+					<section>Slide 1.1</section>
+					<section>Slide 1.2</section>
+					<section>Slide 1.3</section>
+				</section>
+				<section>
+					<section>Slide 2.1</section>
+					<section>Slide 2.2</section>
+					<section>Slide 2.3</section>
+				</section>
+				<section>Slide 3.0
 						<aside class="notes">
 						<p>Some notes</p>
 						</aside>
@@ -39,6 +48,9 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+				navigationMode: 'linear',
+				slideNumber: true,
+				loop: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
